# local-presence-scorer

./: .env.example  .gitignore  README.md  pyproject.toml
src/local_scorer/: __init__.py  config.py
src/local_scorer/api/: dependencies.py  main.py
src/local_scorer/api/routers/: compare.py  health.py  nearby.py  score.py  search.py
src/local_scorer/cli/: main.py
src/local_scorer/clients/: __init__.py  base.py  facebook.py  google_places.py  instagram.py  tiktok.py
src/local_scorer/models/: __init__.py  business.py  recommendations.py  scores.py
src/local_scorer/resolvers/: __init__.py  instagram_resolver.py  social_resolver.py
src/local_scorer/scorers/: __init__.py  local_scorer.py  normalizers.py  social_scorer.py  total_scorer.py
src/local_scorer/services/: __init__.py  compare_service.py  nearby_service.py  recommendation_service.py  search_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_instagram_resolver.py  test_normalizers.py  test_scorers.py
