[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-presence-scorer"
version = "0.1.0"
description = "Score, rank and compare local businesses' digital presence using Google Places + Instagram data"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.3",
    "aiolimiter>=1.1",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "eval-type-backport>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
local-scorer = "local_scorer.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_scorer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
